Fix scrollbar

--- a/src/Pages/LandingPage/App.scss
+++ b/src/Pages/LandingPage/App.scss
@@ -14,7 +14,7 @@ body {
 .main-container {
   height: 100vh;
   width: 100vw;
-  overflow-y: scroll;
+  
   overflow-x: hidden;
 }
 
